@@ -1,0 +1,9 @@
+Title: Now you are able to search for check plugins
+Level: 1
+Component: multisite
+Compatible: compat
+Version: 1.4.0i3
+Date: 1480511530
+Class: feature
+
+
